# data-sky-net

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  CHANGELOG.md  README.md  pyproject.toml  version.py
data-sky/console/: main.py
data-sky/console/commands/: register.json
data-sky/console/commands/sample_command/: sample_command.py
data-sky/console/commands/sample_meta/: cli_command.py
data-sky/console/console_utils/: command_register.py  upgrade_command_register.py
data-sky/console/console_utils/redash/: checks_redash.py  questions_redash.py  redash_generator.py  redash_util.py
data-sky/dumps/mongo/dataskai/: feature_loader_configs.metadata.json  metric_service_configs.metadata.json  raw_data_loader_configs.metadata.json  submits.metadata.json  submitter_configs.metadata.json  target_loader_configs.metadata.json  tasks_loader_configs.metadata.json
data-sky/redash/: docker-compose.yml  setup.sh
data-sky/redash/redash_template/: cookiecutter.json
data-sky/redash/redash_template/{{cookiecutter.project_name}}/: postgres.dump  postgres_user.dump
data-sky/redash/scripts/: message.sql  metrics_by_message.sql  remove_tags.sql
docker_scripts/: build_docker_image_testing.sh  run_docker_container_testing.sh
dockerfiles/: Dockerfile  Dockerfile_testing
docs/: about.rst  api.rst  configuration.rst  docs_config.yaml  installation.rst  instruction.rst  start_stop.rst  templating.rst
tests/console/commands/: conftest.py  register_test.json  register_test2.json  test_bind.py
tests/toolkit_cli/: test_make_dataset.py
(+10 files in other folders)
